index.html編集の流れを追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>GitHubの練習</h1>
+
+    <h2>編集の流れ</h2>
+
+    <ol>
+        <li>Fetch originをクリック</li>
+        <li>pullがでたら、pullをクリック</li>
+        <li>ローカルでファイルを編集する</li>
+        <li>編集が終わったら、Fetch originをクリックし、pullがでたら、pullをクリック</li>
+        <li>コミットする</li>
+        <li>Pushをクリック</li>
+    </ol>
     
 </body>
 </html>
